Fixed button spacing

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -248,7 +248,7 @@ input.search-input {
 #sold-button {
   height: 40px;
   display: none;
-  margin: 10px;
+  margin: 4px;
 }
 
 #message-seller-btn:hover .message-icon {
