--- a/styles/_nav.scss
+++ b/styles/_nav.scss
@@ -238,7 +238,7 @@ input.search-input {
 #sold-button {
   height: 40px;
   display: none;
-  margin: 10px;
+  margin: 4px;
 }
 
 #message-seller-btn:hover .message-icon {
